--- a/designs/index.html
+++ b/designs/index.html
@@ -9,7 +9,7 @@
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	
+
 </head>
 <body>
 	<!-- navigation bar start here -->
@@ -43,7 +43,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4 col-center">
-					<h3 class="col-head">Sign up</h3>
+					<h3 class="col-head">Sign in</h3>
 					<form class="form-horizontal">
 						<div class="form-group">
 							<i class="fa fa-user" aria-hidden="true"></i>
@@ -54,7 +54,7 @@
 							<input type="password" class="form-control" placeholder="Password">
 						</div>
 						<p class="col-head">
-							Forgot password ? 
+							Forgot password ?
 						</p>
 						<p><a class="a-reset" href="#">Reset password</a></p>
 						<p><a class="a-account" href="sign-up.html">Create a New account</a></p>
